wdl-analysis/tests/validation/duplicate-call-inputs/source.errors
error: unknown task or workflow `a`
  ┌─ tests/validation/duplicate-call-inputs/source.wdl:6:10
  │
6 │     call a {
  │          ^

warning[UnusedCall]: unused call `a`
  ┌─ tests/validation/duplicate-call-inputs/source.wdl:6:10
  │
6 │     call a {
  │          ^

